ingress.yaml
## 服务
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
  #  name: mysql # 应用端口
  clusterIP: None
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  namespace: default
  name: mysql-route
spec:
  entryPoints:
  - mysql
  routes:
  - kind: Rule
    match: HostSNI(`*`) # 首页
    services:
    - name: mysql
      port: 3306
