mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306 # 应用端口
## mysql节点
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec: 
  selector: 
    matchLabels: 
      app: mysql # 匹配 .spec.template.metadata.labels
  serviceName: mysql
  replicas: 3
  template: 
    metadata:
      labels:
        app: mysql # 匹配 .spec.selector.matchLabels
    spec:
      containers:
      - name: mysql
        image: mysql
        imagePullPolicy: IfNotPresent
        args: ["--default-authentication-plugin=mysql_native_password"]
        ports:
        - containerPort: 3306
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
          # subPath: mysql
        - name: conf
          mountPath: /etc/mysql/conf.d
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        livenessProbe: ## 存货探针
          exec:
            command:
            - /bin/sh
            - "-c"
            - MYSQL_PWD="${MYSQL_ROOT_PASSWORD}"
            - mysql -h 127.0.0.1 -u root -e "SELECT 1"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe: ## 状态探针
          exec:
            # Check we can execute queries over TCP (skip-networking is off).
            command: 
              - /bin/sh
              - "-c"
              - MYSQL_PWD="${MYSQL_ROOT_PASSWORD}"
              - mysql -h 127.0.0.1 -u root -e "SELECT 1"
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
      volumes:
      - name: conf
        emptyDir: {}
      - name: config-map
        configMap:
          name: mysql
      - name: data
        hostPath: # 指向本地文件
          path: /mnt/data/mysql
## mysql-shell
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-shell
  labels:
    app: mysql
spec:
  containers:
    - name: mysqlsh
      image: registry.cn-beijing.aliyuncs.com/baoweikai/mysql-shell
      imagePullPolicy: IfNotPresent
      command:
        - /bin/sh
        - "-c"
        - --
      args: [ "while true; do sleep 30; done;" ]
      volumeMounts:
      - name: conf
        mountPath: /etc/mysql
  volumes:
  - name: conf
    hostPath: # 指向本地文件
      path: /mnt/k8s/etc/mysql
## 入口路由
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  namespace: default
  name: mysql-route
spec:
  entryPoints:
  - mysql
  tls:
    secretName: mysql-tls
  routes:
  - match: HostSNI(`mysql.ls.com`) # 首页
    services:
    - name: mysql
      port: 3306

## openssl 命令生成 CA 证书
# openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout tls.key -out tls.crt -subj "/CN=mysql.ls.com"
## 创建secret对象来存储证书 # kubectl create secret mysql-tls 删除
# kubectl create secret tls mysql-tls --cert=tls.crt --key=tls.key
