nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
  labels:
    app: app
spec:
  sessionAffinity: ClientIP ## 开启了session保持
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800 ## 10800秒,3小时
  ports:
    - port: 80 # 容器端口
      protocol: TCP
      targetPort: 80 # 应用端口
    - port: 443 # 容器端口
      protocol: TCP
      targetPort: 443 # 应用端口
  selector:
    app: app-nginx
# nginx部署
---
apiVersion: apps/v1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: nginx
  # namespace: default
  labels:
    app: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - name: http
              containerPort: 80  ## http端口
            - name: https
              containerPort: 443  ## https端口
          volumeMounts:
            - name: www
              mountPath: /usr/share/nginx/html
            - name: conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: vhost
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: www
          hostPath: # 指向本地文件
            path: /mnt/www
        - name: conf
          configMap:
            name: nginx
        - name: vhost
          hostPath: # 指向本地文件
            path: /mnt/k8s/etc/nginx/vhost
# 入口路由
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  # namespace: default
  name: https-route
spec:
  entryPoints:
    - https
  tls:
    secretName: ls-tls
  routes:
    - match: Host(`ls.com`, `www.ls.com`, `b.ls.com`, `img.ls.com`) # 首页
      kind: Rule
      services:
        - name: nginx
          port: 80
