php.yaml
apiVersion: v1
kind: Service
metadata:
  name: swoole
  namespace: default
  labels:
    app: php
spec:
  sessionAffinity: ClientIP ## 开启了session保持
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800 ## 10800秒,3小时
  ports:
    - port: 9501 # 容器端口
      # protocol: TCP
      targetPort: 9501 # 应用端口
  selector:
    app: php
---
apiVersion: apps/v1 # version
kind: Deployment
metadata:
  name: php
  namespace: default
  labels:
    app: php
spec:
  replicas: 3
  selector:
    matchLabels:
      app: php
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
        - name: php
          image: registry.cn-beijing.aliyuncs.com/baoweikai/php ## php:fpm-alpine 自定义镜像
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9501
              # name: php
          command: [ "/bin/sh", "-c", "php /var/www/html/$(HTML_DIR)think swoole" ]
          volumeMounts:
            - name: html
              mountPath: /var/www/html
            - name: php-ini
              mountPath: /usr/local/etc/php/php.ini
              #subPath: php.ini
      volumes:
        - name: html
          hostPath:
            path: /mnt/www
        - name: php-ini
          #configMap:
          #  name: php
          hostPath:
            path: /mnt/k8s/etc/php/php.ini
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  # namespace: default
  name: swoole-route
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`api.ls.com`) # 首页
      kind: Rule
      services:
        - name: swoole
          port: 9501
