traefik.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.2
          imagePullPolicy: IfNotPresent
          args:
            - --log.level=DEBUG
            - --api
            - --api.insecure
            - --entrypoints.http.address=:80
            - --entrypoints.https.address=:443
            - --entrypoints.php.address=:9000/udp
            - --entrypoints.swoole.address=:9501
            - --entrypoints.mysql.address=:3306
            - --entrypoints.redis.address=:6379
            - --providers.kubernetescrd
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: mysql
              containerPort: 3306
            - name: admin
              containerPort: 8080
      tolerations:              ## 设置容忍所有污点，防止节点被设置污点
        - operator: "Exists"
# 服务
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
# 
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-route
  namespace: default
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`traefik.ls.com`)
      kind: Rule
      services:
      - name: traefik
        port: 8080
